--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,26 @@
-.App {
-  text-align: center;
+.login-wrapper {
+	background: #56bc8a ;
+	height: 100%;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.login-bg-img {
+	height: 100%;
+	background: url('https://placeimg.com/1920/1080/any/grayscale') 100% 100%/cover no-repeat;
+	display: none;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.login-panel {
+	position: absolute;
+	margin: auto;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	top: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.login-logo {
+	color: white;
+	text-align: center;
+	font-size: 128px;
+	font-family: "comic sans ms";
 }
