--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
-body {
+html, body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  height: 100%;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
+}
+#root {
+	height: 100%;
 }
