--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import '~antd/dist/antd.css';
 .login-wrapper {
 	background: #56bc8a ;
 	height: 100%;
@@ -5,6 +6,19 @@
 .login-bg-img {
 	height: 100%;
 	display: none;
+}
+.login-bg-img:before {
+	content: "";
+	background-color: #000;
+	position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: .6;
+    background-color: rgba(0,0,0,.3);
+    -webkit-transition: all .5s;
+    transition: all .5s;
 }
 .login-panel {
 	position: absolute;
@@ -19,8 +33,12 @@
 	flex-direction: column;
 }
 .login-logo {
-	color: white;
+	color: #fff;
 	text-align: center;
 	font-size: 128px;
 	font-family: "comic sans ms";
+}
+.login-panel form {
+	width: 200px;
+	height: 300px;
 }
