--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -1,10 +1,17 @@
-#components-layout-demo-top .logo {
+.index .logo {
     width: 120px;
     height: 31px;
     background: rgba(255,255,255,.2);
     margin: 16px 24px 16px 0;
     float: left;
-  }
-  .index {
-      height: 100%;
-  }
+}
+.index {
+    height: 100%;
+}
+.content {
+    padding: 0 30px;
+}
+.footer {
+    text-align: center;
+    font-size: 12px;
+}
