--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -1,9 +1,9 @@
 .index .logo {
-    width: 120px;
-    height: 31px;
-    background: rgba(255,255,255,.2);
-    margin: 16px 24px 16px 0;
     float: left;
+    width: 120px;
+    font-family: "comic sans ms";
+    color: #fff;
+    font-size: 32px;  
 }
 .index {
     height: 100%;
