--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,17 @@
 .ant-form-vertical .ant-form-item {
 	padding-bottom: 0px;
   }
+.border-r {
+  border-right: 1px solid #ddd;
+}
+.px-2 {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.py-2 {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.p-2 {
+  padding: 10px;
+}
