--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,5 @@
-html, body {
-  margin: 0;
-  padding: 0;
+
+html, body, :global(#root) {
   height: 100%;
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
 }
-#root {
-	height: 100%;
-}
-.h-150 {
-  min-height: 150px;
-}
+
